# translator_middleware

./: .dockerignore  .env  .gitignore  2.mov  AGENTS.md  CNAME  DOCS.md  Dockerfile  MIROFISH_BRIDGE.md  NEW_FEATURES_DOCS.md  README.md  TESTING_GUIDE.md  TRADING_TEMPLATES_CONTEXT.md  TRANSLATOR_MIDDLEWARE_DOCS.md  WEBSITE_DOCS_ADDITIONS.md  check_imports.py  debug_bug.py  debug_safe.txt  diff.txt  diff_safe.txt  docker-compose.yml  engram  engram.bat  engram.db  engram.db-shm  engram.db-wal  out_debug.txt  out_rel.txt  out_test.txt  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  run_backend_local.py  server_log.txt  server_log_utf8.txt  test_crash.py  test_final.txt  test_mirofish_e2e_output.txt  (+5 more)
adapters/: base.py  binance-adapter.js  coinbase-adapter.js  kalshi-adapter.js  mirofish.py  openclaw.py  robinhood-adapter.js
app/: cli.py  main.py
bridge/: __init__.py  memory.py  router.py
delegation/: engine.py
docs/: 01-quickstart.md  02-installation.md  06-cli-reference.md  16-sdk-python-library.md  DEVELOPER_TOOLKIT.md  README.md  about.md  architecture.md  blog-self-healing-semantic-layer.md  deployment.md  testing.md  usage.md
engram-client/: engram.py
engram_sdk/: __init__.py  adapter.py  auth.py  client.py  communication.py  control_plane.py  controlled_tools.py  execution.py  global_data.py  scope.py  types.py
examples/: controlled_data_collection.py  global_data_tools.py  governed_orchestration.py  governed_sequencing_agent.py  pgi_workflow.py  scoped_interaction.py  tool_registration.py  validated_scope_pattern.py
(+149 files in other folders)
