[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engram-sdk"
version = "0.1.0"
description = "Engram SDK client for the translator middleware."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27.0",
]

[tool.setuptools]
packages = ["engram_sdk"]

